# vault-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: eval_set.json  run_eval.py
scripts/: seed_demo.py
src/vault_mcp/: __init__.py  embeddings.py  search.py  server.py  storage.py
src/vault_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_search.py  test_storage.py
